src/test/deca/context/valid/ContextSansObjet/OperationsArithmetiques/ModuloIntInt.deca
//Description :
//	Vérification contextuelle de l'opérateur % avec des variables int
//
//Résultats :
//	ok

{
    int x = 1%2;
    int y = 6%x;
}