src/test/deca/context/invalid/provided/ContextSansObjet/OperationsBooleennes/EqIntString.deca
//Description:
//  Vérification contextuelle de == avec des types incompatibles (int, string)
//
//Résultat:
//  Erreur contextuelle
//  ligne 10 : types non compatibles pour faire la comparaison
{
    int x = 1;
    string y = "1";
    x == y ;
}